--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto = update
 
-security.jwt.expiracao=30
+security.jwt.expiracao=3000000
 security.jwt.chave-assinatura=YXBpIHNpc3RlbWEgZGUgY29udHJvbGUgYWNhZGVtaWNv
